--- a/src/Root/App.pcss
+++ b/src/Root/App.pcss
@@ -14,6 +14,10 @@
   --second-font-family: Rubik, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: var(--main-font-family);
   color: var(--main-text-color);
