--- a/src/Root/App.pcss
+++ b/src/Root/App.pcss
@@ -2,11 +2,12 @@
   --main-text-color: #262626;
   --contrast-main-text-color: #ffffff;
   --second-text-color: #7d7d7d;
-  --main-bg-color: #e5e5e5;
+  --main-bg-color: #f5f7fa;
   --second-bg-color: #ffffff;
   --dark-bg-color: #1b1d29;
   --primary-color: #0085ff;
-  --border-color: #f5f7fa;
+  --border-color: #cfd2d9;
+  --muted-color: #a8a8a8;
 
   --label-font-size: 11px;
 
