--- a/src/Root/Main/Main.pcss
+++ b/src/Root/Main/Main.pcss
@@ -6,7 +6,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     overflow: hidden;
+    background: var(--main-bg-color);
   }
 
   &__page-body {
@@ -14,6 +16,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    width: 100%;
   }
 
   &__page-content {
