--- a/src/Root/App.pcss
+++ b/src/Root/App.pcss
@@ -25,6 +25,7 @@ body {
 }
 
 h1 {
+  margin: 0;
   font-family: var(--second-font-family);
   font-size: 39px;
   font-weight: 300;
@@ -33,6 +34,7 @@ h1 {
 }
 
 h2 {
+  margin: 0;
   font-size: 29px;
   font-weight: 300;
   line-height: 42px;
