Create TextField components.

--- a/src/Root/App.pcss
+++ b/src/Root/App.pcss
@@ -53,4 +53,5 @@ label {
   font-size: var(--label-font-size);
   line-height: 16px;
   text-transform: uppercase;
+  color: var(--second-text-color);
 }
