--- a/src/Root/App.pcss
+++ b/src/Root/App.pcss
@@ -13,6 +13,8 @@
 
   --main-font-family: Roboto, sans-serif;
   --second-font-family: Rubik, sans-serif;
+
+  --activeShadow: 0 0 2px 0 var(--primary-color);
 }
 
 * {
