--- a/src/components/TextField/TextField.pcss
+++ b/src/components/TextField/TextField.pcss
@@ -8,7 +8,7 @@
 
   &__input {
     width: 300px;
-    padding: 15px 17px 11px;
+    padding: 14px 17px 10px;
     border-radius: 4px;
     outline: none;
     border: 1px solid var(--border-color);
@@ -18,7 +18,7 @@
 
     &:hover, &:focus {
       border-color: var(--primary-color);
-      box-shadow: 0 0 2px 0 var(--primary-color);
+      box-shadow: var(--activeShadow);
     }
   }
 }
