--- a/src/Root/Main/components/Header/Header.pcss
+++ b/src/Root/Main/components/Header/Header.pcss
@@ -1,6 +1,7 @@
 .Header {
   display: flex;
   flex-flow: row wrap;
+  align-items: center;
   padding: 18px 32px 16px;
   background: var(--second-bg-color);
 
