--- a/src/Root/Main/Main.pcss
+++ b/src/Root/Main/Main.pcss
@@ -1,4 +1,5 @@
 .Main {
+  position: relative;
   height: 100vh;
   display: flex;
 
@@ -17,6 +18,7 @@
     justify-content: space-between;
     height: 100%;
     width: 100%;
+    overflow: auto;
   }
 
   &__page-content {
