Add filter to ServicesPage.
Create NoContent component.

--- a/src/pages/Services/components/Service/Service.pcss
+++ b/src/pages/Services/components/Service/Service.pcss
@@ -1,5 +1,5 @@
 .Service {
-  margin-top: 24px;
+  margin-bottom: 24px;
   border-radius: 4px;
   display: grid;
   grid-template-columns: repeat(auto-fit, 1fr);
