--- a/src/pages/Services/ServicesPage.pcss
+++ b/src/pages/Services/ServicesPage.pcss
@@ -1,5 +1,6 @@
 .ServicesPage {
   &__filter-section {
+    margin-bottom: 24px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-column-gap: 8px;
