--- a/src/components/TextField/TextField.pcss
+++ b/src/components/TextField/TextField.pcss
@@ -7,7 +7,7 @@
   }
 
   &__input {
-    width: 300px;
+    max-width: 300px;
     padding: 14px 17px 10px;
     border-radius: 4px;
     outline: none;
