--- a/src/pages/Services/ServicesPage.pcss
+++ b/src/pages/Services/ServicesPage.pcss
@@ -2,14 +2,14 @@
   &__filter-section {
     margin-bottom: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 300px));
     grid-column-gap: 8px;
     grid-row-gap: 16px;
     align-items: end;
     justify-items: start;
 
     @media (min-width: 768px) {
-      grid-template-columns: 300px auto;
+      grid-template-columns: 280px auto;
     }
   }
 }
