--- a/src/Root/Main/components/Header/Header.pcss
+++ b/src/Root/Main/components/Header/Header.pcss
@@ -1,6 +1,6 @@
 .Header {
   display: flex;
-  align-items: end;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 18px 32px 16px;
   background: var(--second-bg-color);
