--- a/src/components/TextField/TextField.pcss
+++ b/src/components/TextField/TextField.pcss
@@ -1,13 +1,13 @@
 .TextField {
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   &__label {
     margin-bottom: 7px;
   }
 
   &__input {
-    max-width: 300px;
     padding: 14px 17px 10px;
     border-radius: 4px;
     outline: none;
