--- a/src/Root/Main/components/Navigation/Navigation.pcss
+++ b/src/Root/Main/components/Navigation/Navigation.pcss
@@ -10,6 +10,7 @@
   align-items: center;
   background: var(--dark-bg-color);
   transition: 0.25s ease;
+  overflow: scroll;
 
   @media (min-width: 768px) {
     position: relative;
